fix tags & text overflow

--- a/static/styles/content/content.scss
+++ b/static/styles/content/content.scss
@@ -64,7 +64,12 @@ h1, h3 {
     margin-bottom: 10px;
 }
 .card-tags {
+    overflow: hidden;
+    text-overflow: ellipsis;
     margin-bottom: 10px;
+}
+.card-text {
+    word-wrap: break-word;
 }
 .tooltip-inner {
   color: white ;
